2013-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix handling of IY during accesses to global variables.

2013-11-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix use flag initialization in lospre edge splitting.
	* src/SDCCglue.c:
	  Add comment on bug #2089 that allocates strings twice.

2013-11-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_divulong.c: cosmetic, use y0
	* device/lib/_fsadd.c: cosmetic
	* device/lib/clean.mk: clean pic14 and tlcs90
	* device/lib/ds390/tinibios.c (_sdcc_external_startup): do not change stack
	* device/lib/Makefile.in: use TAB's
	* device/non-free/lib/clean.mk: clean pic14
	* device/non-free/lib/pic14/Makefile.in,
	* sdas/as6808/clean.mk,
	* sdas/as8051/clean.mk,
	* sdas/as8xcxxx/clean.mk,
	* sdas/asgb/clean.mk,
	* sdas/asrab/clean.mk,
	* sdas/asstm8/clean.mk,
	* sdas/astlcs90/clean.mk,
	* sdas/asz80/clean.mk,
	* support/sdbinutils/Makefile.in: prevent warnings
	* sim/ucsim/cmd.src/clean.mk: clean cmdpars.* & cmdlex.*
	* src/clean.mk: clean pic14 and stm8
	* src/common.h: cosmetic
	* src/ds390/main.c (_ds390_genAssemblerPreamble): added dpl, dph, acon,
	  (_ds390_genIVT): change addressing mode and stack at __reset_vect,
	  (_ds390_genInitStartup): no need for 10bit stack init here
	* src/port.h: added rtrackUpdate
	* src/SDCCgen.c (emit_raw): try to track constant register contents
	* src/ds390/main.c,
	* src/hc08/main.c,
	* src/pic14/main.c,
	* src/pic16/main.c,
	* src/stm8/main.c,
	* src/z80/main.c (*_port): no register tracking
	* src/mcs51/rtrack.h: renamed rtrackUpdate to _mcs51_rtrackUpdate
	* src/mcs51/rtrack.c: enabled by default,
	  implemented suggested removals
	* src/mcs51/main.c: use _mcs51_rtrackUpdate
	* src/mcs51/gen.c (genSend, genPagedPointerGet): fixed bugs obscured by
	  peephole rules,
	  (genLeftShiftLiteral): disabled assert to fix bug 2224
	* src/z80/z80.vcxproj,
	* src/z80/z80.vcxproj.filters: added peeph-tlcs90.def